# Foxie

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  databases.py  security.py
app/models/: apilog.py  users.py
app/routers/: auth.py  generate.py  users.py
app/schemas/: generate.py  users.py
app/services/: auth.py  llm.py  logmiddleware.py
cli/: foxie_cli.py
data/rag_knowledge_base/fastapi/: base_model.py.example  db_session.py.example
docs/: FEATURES.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md
foxie-backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
foxie-backend/app/: main.py
foxie-backend/app/core/: config.py  file_generator.py  generator.py  prompts.py  react_agent.py
foxie-backend/app/utils/: api_key_manager.py  rag.py  validators.py
foxie-backend/data/rag_knowledge_base/fastapi/: auth_dependency.py.example  auth_endpoints.py.example  base_model_mongodb.py.example  config.py.example  db_session.py.example  db_session_mongodb.py.example  main.py.example  security.py.example  user_model.py.example
foxie-backend/data/templates/auth/: auth_dependency.py.j2  auth_endpoints.py.j2  security.py.j2  user_crud.py.j2  user_model.py.j2  user_schema.py.j2
foxie-cli/: Dockerfile  PUBLISHING.md  README.md  main.py  pyproject.toml
foxie-cli/foxie_cli/: cli.py
foxie-cli/foxie_cli/core/: generator.py  prompts.py
foxie-cli/foxie_cli/utils/: file_writer.py  parser.py
foxie-cli/src/foxie_cli/: cli.py
foxie-cli/src/foxie_cli/utils/: file_writer.py  template_generator.py
foxie_cli/: cli.py
foxie_cli/core/: generator.py  models.py  prompts.py
foxie_cli/utils/: file_writer.py
generated_code/my-fastapi-crud/app/: main.py
generated_code/my-fastapi-crud/app/api/: router.py
generated_code/my-fastapi-crud/app/api/endpoints/: auth.py  product.py
generated_code/my-fastapi-crud/app/core/: config.py
generated_code/my-fastapi-crud/app/crud/: product.py
generated_code/my-fastapi-crud/app/database/: db_session.py
generated_code/my-fastapi-crud/app/dependencies/: auth_dependency.py
generated_code/my-fastapi-crud/app/models/: base_model.py  product.py
generated_code/my-fastapi-crud/app/schemas/: product.py  user.py
tests/: test_code.py  test_typer.py
