[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.45.0",
    "instructor>=1.11.3",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "typer>=0.19.2",
]

[project.scripts]
foxie = "foxie_cli.cli:app"
