[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxie-cli"
version = "0.1.0"
description = "A smart AI-powered code scaffolding CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.45.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.19.2",
]

[project.scripts]
foxie = "foxie_cli.cli:app"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
]

[tool.setuptools]
# Use setuptools find to discover packages under src/ (src-layout)
[tool.setuptools.packages.find]
where = ["src"]
include = ["foxie_cli*"]


